-include $(top_builddir)/common.mk

libsilofsdir = $(libdir)
libsilofs_LTLIBRARIES = libsilofs.la
libsilofs_la_LDFLAGS = $(NULL)
libsilofs_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_la_LDFLAGS += -version-info 0
libsilofs_la_CPPFLAGS = $(NULL)
libsilofs_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_la_CPPFLAGS += -DSILOFS_HAVE_PRIVATE=1
libsilofs_la_LIBADD = $(NULL)
libsilofs_la_LIBADD += @LIBS@
libsilofs_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_la_SOURCES = $(NULL)
libsilofs_la_SOURCES += initlib.c
libsilofs_la_SOURCES += sys/syscall.c
libsilofs_la_SOURCES += sys/syscallx.c
libsilofs_la_SOURCES += infra/avl.c
libsilofs_la_SOURCES += infra/base64.c
libsilofs_la_SOURCES += infra/bytebuf.c
libsilofs_la_SOURCES += infra/iovec.c
libsilofs_la_SOURCES += infra/hash.c
libsilofs_la_SOURCES += infra/list.c
libsilofs_la_SOURCES += infra/logging.c
libsilofs_la_SOURCES += infra/panic.c
libsilofs_la_SOURCES += infra/pipe.c
libsilofs_la_SOURCES += infra/qalloc.c
libsilofs_la_SOURCES += infra/random.c
libsilofs_la_SOURCES += infra/socket.c
libsilofs_la_SOURCES += infra/strings.c
libsilofs_la_SOURCES += infra/thread.c
libsilofs_la_SOURCES += infra/time.c
libsilofs_la_SOURCES += infra/utility.c
libsilofs_la_SOURCES += addr/blobid.c
libsilofs_la_SOURCES += addr/hmapq.c
libsilofs_la_SOURCES += addr/ivkey.c
libsilofs_la_SOURCES += addr/laddr.c
libsilofs_la_SOURCES += addr/ltype.c
libsilofs_la_SOURCES += addr/meta.c
libsilofs_la_SOURCES += addr/oaddr.c
libsilofs_la_SOURCES += addr/offlba.c
libsilofs_la_SOURCES += addr/caddr.c
libsilofs_la_SOURCES += addr/uaddr.c
libsilofs_la_SOURCES += addr/vaddr.c
libsilofs_la_SOURCES += vol/blobs.c
libsilofs_la_SOURCES += vol/crypto.c
libsilofs_la_SOURCES += vol/bcache.c
libsilofs_la_SOURCES += vol/pnodes.c
libsilofs_la_SOURCES += vol/repo.c
libsilofs_la_SOURCES += fs/boot.c
libsilofs_la_SOURCES += fs/claim.c
libsilofs_la_SOURCES += fs/delfs.c
libsilofs_la_SOURCES += fs/dir.c
libsilofs_la_SOURCES += fs/encdec.c
libsilofs_la_SOURCES += fs/file.c
libsilofs_la_SOURCES += fs/flush.c
libsilofs_la_SOURCES += fs/fuseq.c
libsilofs_la_SOURCES += fs/idmap.c
libsilofs_la_SOURCES += fs/inode.c
libsilofs_la_SOURCES += fs/inspect.c
libsilofs_la_SOURCES += fs/lcache.c
libsilofs_la_SOURCES += fs/lnodes.c
libsilofs_la_SOURCES += fs/mntsvc.c
libsilofs_la_SOURCES += fs/namei.c
libsilofs_la_SOURCES += fs/opers.c
libsilofs_la_SOURCES += fs/spmaps.c
libsilofs_la_SOURCES += fs/spxmap.c
libsilofs_la_SOURCES += fs/stats.c
libsilofs_la_SOURCES += fs/super.c
libsilofs_la_SOURCES += fs/symlink.c
libsilofs_la_SOURCES += fs/task.c
libsilofs_la_SOURCES += fs/fsenv.c
libsilofs_la_SOURCES += fs/ustage.c
libsilofs_la_SOURCES += fs/vstage.c
libsilofs_la_SOURCES += fs/walk.c
libsilofs_la_SOURCES += fs/xattr.c
libsilofs_la_SOURCES += pack/catalog.c
libsilofs_la_SOURCES += pack/export.c
libsilofs_la_SOURCES += pack/import.c
libsilofs_la_SOURCES += pack/zcmpr.c
libsilofs_la_SOURCES += execlib.c
libsilofs_la_SOURCES += version.c

