-include $(top_builddir)/common.mk

bin_PROGRAMS = silofs-vfstests
silofs_vfstests_CPPFLAGS = $(NULL)
silofs_vfstests_CPPFLAGS += -I$(top_srcdir)/include
silofs_vfstests_LDFLAGS = $(NULL)
silofs_vfstests_LDFLAGS += -L$(top_builddir)/lib
silofs_vfstests_LDFLAGS += -static
silofs_vfstests_LDADD = @LIBS@
silofs_vfstests_LDADD += $(top_builddir)/lib/libsilofs_infra.la
silofs_vfstests_LDADD += $(PTHREAD_LIBS)
silofs_vfstests_LDADD += $(LIBGCRYPT_LIBS)
silofs_vfstests_SOURCES = $(NULL)
silofs_vfstests_SOURCES += test_access.c
silofs_vfstests_SOURCES += test_boundaries.c
silofs_vfstests_SOURCES += test_chmod_chown.c
silofs_vfstests_SOURCES += test_clone.c
silofs_vfstests_SOURCES += test_copy_file_range.c
silofs_vfstests_SOURCES += test_create.c
silofs_vfstests_SOURCES += test_fallocate.c
silofs_vfstests_SOURCES += test_fiemap.c
silofs_vfstests_SOURCES += test_fifo.c
silofs_vfstests_SOURCES += test_fsync.c
silofs_vfstests_SOURCES += test_link.c
silofs_vfstests_SOURCES += test_lseek.c
silofs_vfstests_SOURCES += test_mkdir.c
silofs_vfstests_SOURCES += test_mmap.c
silofs_vfstests_SOURCES += test_namespace.c
silofs_vfstests_SOURCES += test_open.c
silofs_vfstests_SOURCES += test_readdir.c
silofs_vfstests_SOURCES += test_rename.c
silofs_vfstests_SOURCES += test_rw_basic.c
silofs_vfstests_SOURCES += test_rw_large.c
silofs_vfstests_SOURCES += test_rw_random.c
silofs_vfstests_SOURCES += test_rw_sequential.c
silofs_vfstests_SOURCES += test_rw_sparse.c
silofs_vfstests_SOURCES += test_stat.c
silofs_vfstests_SOURCES += test_stat_io.c
silofs_vfstests_SOURCES += test_statvfs.c
silofs_vfstests_SOURCES += test_symlink.c
silofs_vfstests_SOURCES += test_tmpfile.c
silofs_vfstests_SOURCES += test_truncate.c
silofs_vfstests_SOURCES += test_truncate_file.c
silofs_vfstests_SOURCES += test_unlink.c
silofs_vfstests_SOURCES += test_unlinked_file.c
silofs_vfstests_SOURCES += test_utimes.c
silofs_vfstests_SOURCES += test_write.c
silofs_vfstests_SOURCES += test_xattr.c
silofs_vfstests_SOURCES += vfstests_exec.c
silofs_vfstests_SOURCES += vfstests.h
silofs_vfstests_SOURCES += vfstests_main.c
silofs_vfstests_SOURCES += vfstests_syscall.c
silofs_vfstests_SOURCES += vfstests_utility.c
