-include $(top_builddir)/common.mk

bin_PROGRAMS = silofs-vtests
silofs_vtests_CPPFLAGS = $(NULL)
silofs_vtests_CPPFLAGS += -I$(top_srcdir)/include
silofs_vtests_LDFLAGS = $(NULL)
silofs_vtests_LDFLAGS += -L$(top_builddir)/lib
silofs_vtests_LDFLAGS += -static
silofs_vtests_LDADD = @LIBS@
silofs_vtests_LDADD += $(top_builddir)/lib/libsilofs.la
silofs_vtests_LDADD += $(PTHREAD_LIBS)
silofs_vtests_LDADD += $(LIBGCRYPT_LIBS)
silofs_vtests_SOURCES = $(NULL)
silofs_vtests_SOURCES += test_access.c
silofs_vtests_SOURCES += test_boundaries.c
silofs_vtests_SOURCES += test_chmod_chown.c
silofs_vtests_SOURCES += test_clone.c
silofs_vtests_SOURCES += test_copy_file_range.c
silofs_vtests_SOURCES += test_create.c
silofs_vtests_SOURCES += test_fallocate.c
silofs_vtests_SOURCES += test_fiemap.c
silofs_vtests_SOURCES += test_fifo.c
silofs_vtests_SOURCES += test_fsync.c
silofs_vtests_SOURCES += test_link.c
silofs_vtests_SOURCES += test_lseek.c
silofs_vtests_SOURCES += test_mkdir.c
silofs_vtests_SOURCES += test_mmap.c
silofs_vtests_SOURCES += test_namespace.c
silofs_vtests_SOURCES += test_open.c
silofs_vtests_SOURCES += test_readdir.c
silofs_vtests_SOURCES += test_rename.c
silofs_vtests_SOURCES += test_rw_basic.c
silofs_vtests_SOURCES += test_rw_large.c
silofs_vtests_SOURCES += test_rw_random.c
silofs_vtests_SOURCES += test_rw_sequential.c
silofs_vtests_SOURCES += test_rw_sparse.c
silofs_vtests_SOURCES += test_stat.c
silofs_vtests_SOURCES += test_stat_io.c
silofs_vtests_SOURCES += test_statvfs.c
silofs_vtests_SOURCES += test_symlink.c
silofs_vtests_SOURCES += test_tmpfile.c
silofs_vtests_SOURCES += test_truncate.c
silofs_vtests_SOURCES += test_truncate_file.c
silofs_vtests_SOURCES += test_unlink.c
silofs_vtests_SOURCES += test_unlinked_file.c
silofs_vtests_SOURCES += test_utimes.c
silofs_vtests_SOURCES += test_write.c
silofs_vtests_SOURCES += test_xattr.c
silofs_vtests_SOURCES += vtests_exec.c
silofs_vtests_SOURCES += vtests.h
silofs_vtests_SOURCES += vtests_main.c
silofs_vtests_SOURCES += vtests_syscall.c
silofs_vtests_SOURCES += vtests_utility.c
